--- a/html/generate/shengcheng.html
+++ b/html/generate/shengcheng.html
@@ -15,53 +15,32 @@
 				<img src="img/board.png" alt="center-bg" class="center-bg">
 				<img src="img/brand.png" alt="brand" class="center-brand">
 				<img src="img/option.png" alt="option" class="option">
-				<div class="hairoption">
-					<table cellspacing="0" class="options">
-						<tr>
-							<td>
-								<img src="img/selected.png" alt="selected">
-							</td>
-							<td>
-								<img src="img/selected.png" alt="selected">
-							</td>
-							<td>
-								<img src="img/selected.png" alt="selected">
-							</td>
-						</tr>
-						<tr>
-							<td>
-								<img src="img/selected.png" alt="selected">
-							</td>
-							<td>
-								<img src="img/selected.png" alt="selected">
-							</td>
-							<td>
-								<img src="img/selected.png" alt="selected">
-							</td>
-						</tr>
-						<tr>
-							<td>
-								<img src="img/selected.png" alt="selected">
-							</td>
-							<td>
-								<img src="img/selected.png" alt="selected">
-							</td>
-							<td>
-								<img src="img/selected.png" alt="selected">
-							</td>
-						</tr>
-						<tr>
-							<td>
-								<img src="img/selected.png" alt="selected">
-							</td>
-							<td>
-								<img src="img/selected.png" alt="selected">
-							</td>
-							<td>
-								<img src="img/selected.png" alt="selected">
-							</td>
-						</tr>
-					</table>
+				<div class="hairoption" id="wrap">
+					<img src="img/unselected.png" alt="unselected">
+					<img src="img/unselected.png" alt="unselected">
+					<img src="img/unselected.png" alt="unselected">
+					<img src="img/unselected.png" alt="unselected">
+					<img src="img/unselected.png" alt="unselected">
+					<img src="img/unselected.png" alt="unselected">
+					<img src="img/unselected.png" alt="unselected">
+					<img src="img/unselected.png" alt="unselected">
+					<img src="img/unselected.png" alt="unselected">
+					<img src="img/unselected.png" alt="unselected">
+					<img src="img/unselected.png" alt="unselected">
+					<img src="img/unselected.png" alt="unselected">
+					
+					<!-- <img src="img/unselected.png" alt="unselected" onmouseover="this.src='img/selected.png'" onmouseout="this.src='img/unselected.png'">
+					<img src="img/unselected.png" alt="unselected" onmouseover="this.src='img/selected.png'" onmouseout="this.src='img/unselected.png'">
+					<img src="img/unselected.png" alt="unselected" onmouseover="this.src='img/selected.png'" onmouseout="this.src='img/unselected.png'">
+					<img src="img/unselected.png" alt="unselected" onmouseover="this.src='img/selected.png'" onmouseout="this.src='img/unselected.png'">
+					<img src="img/unselected.png" alt="unselected" onmouseover="this.src='img/selected.png'" onmouseout="this.src='img/unselected.png'">
+					<img src="img/unselected.png" alt="unselected" onmouseover="this.src='img/selected.png'" onmouseout="this.src='img/unselected.png'">
+					<img src="img/unselected.png" alt="unselected" onmouseover="this.src='img/selected.png'" onmouseout="this.src='img/unselected.png'">
+					<img src="img/unselected.png" alt="unselected" onmouseover="this.src='img/selected.png'" onmouseout="this.src='img/unselected.png'">
+					<img src="img/unselected.png" alt="unselected" onmouseover="this.src='img/selected.png'" onmouseout="this.src='img/unselected.png'">
+					<img src="img/unselected.png" alt="unselected" onmouseover="this.src='img/selected.png'" onmouseout="this.src='img/unselected.png'">
+					<img src="img/unselected.png" alt="unselected" onmouseover="this.src='img/selected.png'" onmouseout="this.src='img/unselected.png'"> -->
+				
 				</div>
 				<img src="img/generate.png" alt="generate" class="generate">
 				<img src="img/download.png" alt="downlowd" class="download">
