--- a/html/generate/shengcheng.html
+++ b/html/generate/shengcheng.html
@@ -28,18 +28,19 @@
 					<img src="img/unselected.png" alt="unselected">
 					<img src="img/unselected.png" alt="unselected">
 					<img src="img/unselected.png" alt="unselected">
+<!-- 					<button class="btn">白</button>
+					<button class="btn">橙</button>
+					<button class="btn">粉</button>
+					<button class="btn">黑</button>
+					<button class="btn">红</button>
+					<button class="btn">青</button>
+					<button class="btn">紫</button>
+					<button class="btn">棕</button>
+					<button class="btn">蓝</button>
+					<button class="btn">黄</button>
+					<button class="btn">灰</button>
+					<button class="btn">绿</button> -->
 					
-					<!-- <img src="img/unselected.png" alt="unselected" onmouseover="this.src='img/selected.png'" onmouseout="this.src='img/unselected.png'">
-					<img src="img/unselected.png" alt="unselected" onmouseover="this.src='img/selected.png'" onmouseout="this.src='img/unselected.png'">
-					<img src="img/unselected.png" alt="unselected" onmouseover="this.src='img/selected.png'" onmouseout="this.src='img/unselected.png'">
-					<img src="img/unselected.png" alt="unselected" onmouseover="this.src='img/selected.png'" onmouseout="this.src='img/unselected.png'">
-					<img src="img/unselected.png" alt="unselected" onmouseover="this.src='img/selected.png'" onmouseout="this.src='img/unselected.png'">
-					<img src="img/unselected.png" alt="unselected" onmouseover="this.src='img/selected.png'" onmouseout="this.src='img/unselected.png'">
-					<img src="img/unselected.png" alt="unselected" onmouseover="this.src='img/selected.png'" onmouseout="this.src='img/unselected.png'">
-					<img src="img/unselected.png" alt="unselected" onmouseover="this.src='img/selected.png'" onmouseout="this.src='img/unselected.png'">
-					<img src="img/unselected.png" alt="unselected" onmouseover="this.src='img/selected.png'" onmouseout="this.src='img/unselected.png'">
-					<img src="img/unselected.png" alt="unselected" onmouseover="this.src='img/selected.png'" onmouseout="this.src='img/unselected.png'">
-					<img src="img/unselected.png" alt="unselected" onmouseover="this.src='img/selected.png'" onmouseout="this.src='img/unselected.png'"> -->
 				
 				</div>
 				<img src="img/generate.png" alt="generate" class="generate">
@@ -53,6 +54,7 @@
 			<button class="bubble5" data-type="duck"></button>
 			<button class="bubble6" data-type="bubble7"></button>
 			<button class="bubble7" data-type="biu"></button>
+			
 			<img src="img/statement.png" alt="statement" class="tail">
 		</div>
 		<script type="text/javascript" src="astyle.js"></script>
