--- a/html/generate/shengcheng.html
+++ b/html/generate/shengcheng.html
@@ -16,6 +16,7 @@
 				<img src="img/brand.png" alt="brand" class="center-brand">
 				<img src="img/option.png" alt="option" class="option">
 				<div class="hairoption" id="wrap">
+<!-- 					<img src="img/unselected.png" alt="unselected">
 					<img src="img/unselected.png" alt="unselected">
 					<img src="img/unselected.png" alt="unselected">
 					<img src="img/unselected.png" alt="unselected">
@@ -26,21 +27,19 @@
 					<img src="img/unselected.png" alt="unselected">
 					<img src="img/unselected.png" alt="unselected">
 					<img src="img/unselected.png" alt="unselected">
-					<img src="img/unselected.png" alt="unselected">
-					<img src="img/unselected.png" alt="unselected">
-<!-- 					<button class="btn">白</button>
-					<button class="btn">橙</button>
-					<button class="btn">粉</button>
-					<button class="btn">黑</button>
-					<button class="btn">红</button>
-					<button class="btn">青</button>
-					<button class="btn">紫</button>
-					<button class="btn">棕</button>
-					<button class="btn">蓝</button>
-					<button class="btn">黄</button>
-					<button class="btn">灰</button>
-					<button class="btn">绿</button> -->
-					
+					<img src="img/unselected.png" alt="unselected"> -->
+					<button class="btn" style="color:#fff;">白</button>
+					<button class="btn" style="color:#F1A53D;">橙</button>
+					<button class="btn" style="color:#FD7BCC;">粉</button>
+					<button class="btn" style="color:#F23C57;">红</button>
+					<button class="btn" style="color:#00FFFF;">青</button>
+					<button class="btn" style="color:#B04DAB;">紫</button>
+					<button class="btn" style="color:#AA6253;">棕</button>
+					<button class="btn" style="color:#7CB0EB;">蓝</button>
+					<button class="btn" style="color:#FFFF80;">黄</button>
+					<button class="btn" style="color:#777788;">灰</button>
+					<button class="btn" style="color:#2DFF2D;">绿</button>
+					<button class="btn" style="color:#000;">黑</button>
 				
 				</div>
 				<img src="img/generate.png" alt="generate" class="generate">
