--- a/html/generate/generate.html
+++ b/html/generate/generate.html
@@ -10,7 +10,7 @@
 			<font class="tword">AI生成</font>
 			<ul class="navigation">
 				<li class="li-navi"><a href="" class="navigationlink">首 页</a></li>
-				<li class="li-navi"><a href="" class="navigationlink">生 成</a></li>
+				<li class="li-navi"><a href="" class="selected">生 成</a></li>
 				<li class="li-navi"><a href="" class="navigationlink">上 色</a></li>
 			</ul>
 			<div class="avatar">
@@ -18,7 +18,7 @@
 			</div>
 		</div>
 		<div class="dropdown-content">
-				<a href="">用 户</a>
+				<a href="">用 户:</a>
 				<a href="">历史记录</a>
 				<a href="">个人设置</a>
 				<a href="">帮 助</a>
