--- a/html/sign_in_jump/sign_in_jump.html
+++ b/html/sign_in_jump/sign_in_jump.html
@@ -7,7 +7,9 @@
 	</head>
 	<body>
 		<div class="title">
-			<font class="tword">AI生成</font>
+			<div class="tword">AI生成
+				<img src="img/xin.png" alt="" class="heart">
+			</div>
 			<ul class="navigation">
 				<li class="li-navi"><a href="" class="navigationlink">首 页</a></li>
 				<li class="li-navi"><a href="" class="navigationlink">生 成</a></li>
@@ -28,13 +30,21 @@
 			<a href="" class="return">返回首页>></a>
 		</div>
 		<img src="img/statement.png" alt="statement" class="statement">
-		<img src="img/bubble1.png" alt="bubble1" class="bubble1" data-type="bubble1">
-		<img src="img/bubble2.png" alt="bubble2" class="bubble2" data-type="bubble2">
-		<img src="img/bubble3.png" alt="bubble3" class="bubble3" data-type="bubble3">
-		<img src="img/bubble4.png" alt="bubble4" class="bubble4" data-type="bubble4">
-		<img src="img/bubble5.png" alt="bubble5" class="bubble5" data-type="bubble5">
-		<img src="img/bubble6.png" alt="bubble6" class="bubble6" data-type="bubble6">
-		<img src="img/bubble7.png" alt="bubble7" class="bubble7" data-type="bubble7">
+		<div id="div1">
+			<img src="img/bubble1.png" alt="bubble1" class="bubble1" data-type="bubble1">		
+		</div>
+		<div id="div2">
+			<img src="img/bubble2.png" alt="bubble2" class="bubble2" data-type="bubble2">
+		</div>		
+		<div id="div3">
+			<img src="img/bubble3.png" alt="bubble3" class="bubble3" data-type="bubble3">
+			<img src="img/bubble4.png" alt="bubble4" class="bubble4" data-type="bubble4">
+			<img src="img/bubble5.png" alt="bubble5" class="bubble5" data-type="bubble5">
+		</div>
+		<div id="div4">
+			<img src="img/bubble6.png" alt="bubble6" class="bubble6" data-type="bubble6">
+			<img src="img/bubble7.png" alt="bubble7" class="bubble7" data-type="bubble7">
+		</div>
 		<script type="text/javascript" src="sign_in_jump.js"></script>
 	</body>
 </html>
